Moved intro button higher on mobile to avoid wallet button overlap

--- a/style.css
+++ b/style.css
@@ -455,7 +455,7 @@ body {
   }
 
   #intro-overlay {
-    padding-bottom: 5% !important;
+    padding-bottom: 28% !important;
   }
   
   .modal-content h3 {
